# kudi

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/kudi/: __init__.py  calculator.py  currencies_data.py  currency.py  currency_codes.py  exceptions.py  formatter.py  money.py  types.py
tests/: test_money.py
